# aoc_2022

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  reuse.yaml
.reuse/: dep5
src/: day01.rs  day02.rs  day03.rs  day04.rs  day08.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day25.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  vec-template.rs
