[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Sebastian Andersson <sebastian.andersson@lumenradio.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rayon = "1.5.0"
regex = "1.4.2"
